# mecanum_bot_on_gazebo

control_pkg/: CMakeLists.txt  package.xml
control_pkg/config/: scanner_params.yaml
control_pkg/launch/: scanner.launch.py
control_pkg/src/: scanner.cpp
mapping_pkg/: CMakeLists.txt  package.xml
mapping_pkg/config/: rviz_config.rviz  slam.yaml
mapping_pkg/launch/: map_bring_up.launch.py
perception_pkg/: CMakeLists.txt  package.xml
perception_pkg/src/: lidar_processor_node.cpp
robot_simulation/: CMakeLists.txt  package.xml
robot_simulation/config/: robot_controllers.yaml
robot_simulation/launch/: bring_up.launch.py  controllers.launch.py  robot_state_publisher.launch.py  spawn_entity.launch.py
robot_simulation/src/: mecanum_controller.cpp  mecanum_kinematics_node.cpp  mecanum_teleop_controller.cpp
robot_simulation/urdf/: mecanum_description.gazebo.xacro  mecanum_description.urdf.xacro  robot.gazebo.xacro  robot.urdf.xacro
robot_simulation/worlds/: easy.world
